# httpserver

./: CMakeLists.txt  main.cpp
include/: ManagerCon.hpp  connection.hpp  database.hpp  server.hpp
include/http/: ManagerCon.hpp  commen.hpp  common.hpp  connection.hpp  server.hpp
programs/: CMakeLists.txt
programs/database/: main.cpp
src/: ManagerCon.cpp  connection.cpp  database.cpp  server.cpp
src/http/: ManagerCon.cpp  connection.cpp  server.cpp
test/: CMakeLists.txt  main.cpp
